[package]
name = "quantypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.63"
pyo3 = {version = ">=0.19", optional=true, features = ["multiple-pymethods"]}
rayon = {version = ">=1.10", optional = true}
ndarray = {version = ">=0.16", optional = true}
num = "0.4.3"

[features]
default = ["pyo3", "rayon", "ndarray"]
